--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular-google-charts": "^0.1.5",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "package.json": "^2.0.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
