--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^8.0.1",
     "@angular/router": "^8.0.1",
     "angular-google-charts": "^0.1.5",
+    "angular-notifier": "^4.1.1",
     "core-js": "^3.1.4",
     "hammerjs": "^2.0.8",
     "luxon": "^1.16.0",
